--- a/rules.html
+++ b/rules.html
@@ -149,7 +149,10 @@
 											<li style="color:white;line-height:1.6;">Send your memes to <u>schandramohan7399@gmail.com</u> with your Name,Departmentand College name on or before 26 August 2019</li>
 											<li style="color:white;line-height:1.6;">The meme will be posted in instapage #nictitate2k19.The link will be given and based on the no.of likes participants will be shortlisted for next round which will be held at our college premises.</li>
 											<li style="color:white;"><u>ROUND 2</u>-Video Meme Creation(Only Video meme is allowed)</li>
+											<li style="color:white;line-height:1.6;">**Participants can use any software for creating the video meme.</li>
 											<li style="color:white;">Maximum no.of Participants: 2</li>
+											<li style="color:white;">Last date to upload memes: 29 August 2019</li>
+											<li style="color:white;">Topics for video meme will be given on the spot</li>
 											<li style="color:white;"><b>Selection Process: Time and creativity is of main concern<b></li>
 											<li style="color:white;">The teams which get first and second place will be awarded.</li></span>
 											</ol>
